--- a/day1/master.html
+++ b/day1/master.html
@@ -11,4 +11,16 @@
         master
     </span>
 </body>
+
+<script>
+    const map=new Map([
+        ['name','上三'],
+        ['title','我的密码']
+    ]);
+   
+console.log( map.size);
+console.log(map);
+
+console.log(map.get('name'));
+</script>
 </html>
